--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -6,7 +6,7 @@
   <package id="ComposableAsync.Core" version="1.1.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.6.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.0-preview.8.20407.11" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0-rc.1.20451.14" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Moq" version="4.14.5" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
@@ -16,7 +16,7 @@
   <package id="Octokit" version="0.48.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.11.5-alpha.0.18" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.5-alpha.0.21" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
@@ -24,7 +24,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0-preview.8.20407.11" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0-rc.1.20451.14" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -48,7 +48,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.8.20407.11" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-rc.1.20451.14" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
