--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -2,19 +2,19 @@
 <packages>
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
-  <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
+  <package id="Castle.Core" version="5.0.0" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.7.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="6.0.3" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="Moq" version="4.17.2" targetFramework="net461" />
+  <package id="Moq" version="4.18.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.13.3" targetFramework="net461" />
   <package id="NUnitLite" version="3.13.3" targetFramework="net461" />
-  <package id="Octokit" version="0.50.0" targetFramework="net461" />
+  <package id="Octokit" version="0.51.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.1221" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
   <package id="RestSharp" version="106.15.0" targetFramework="net461" />
@@ -26,6 +26,7 @@
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.EventLog" version="4.7.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -37,7 +38,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
@@ -45,6 +46,7 @@
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
@@ -60,10 +62,11 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net461" />
-  <package id="System.Text.Json" version="6.0.3" targetFramework="net461" />
+  <package id="System.Text.Json" version="6.0.4" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
