--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,12 @@
 image: Visual Studio 2022
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 before_build:
  - nuget restore
 build_script:
  - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF.sln"
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 test_script:
  - .\packages\OpenCover.4.7.1221\tools\OpenCover.Console.exe -register:user -target:"Last.fm-Scrubbler-WPF-Test\bin\Debug\Last.fm-Scrubbler-WPF-Test.exe" -output:".\coverage.xml" -excludebyfile:"*.xaml.cs;*.xaml;*.g.cs" -filter:"+[Last.fm-Scrubbler-WPF]Scrubbler*"
 after_test:
